# rusht

./: Cargo.toml  LICENSE  README.md  report_pir_grp4.md
cli/src/: main.rs
examples/: is_five.lsp
repl/: Cargo.toml
repl/src/: main.rs
rusht/src/: expr.rs  interpret.rs  lib.rs  parse.rs  prelude.rs  token.rs  tokenize.rs
src/: interpret.rs  lib.rs  main.rs  parse.rs  tokenize.rs
src/parse/: eval.rs  lex.rs  par.rs
